Odd blender VSE crashes - Graph editor / Proxy sizes #111642

Closed
opened 2023-08-29 08:20:34 +02:00 by Rely · 14 comments
First-time contributor

System Information
Operating system: Windows 11
Graphics card: RX580

Blender Version
Broken: (3.6.2, 3.4, 3.0)
Worked: Not sure

Short description of error
Blender crashes when I move around keyframes from VSE strips in the graph editor (any strips) - as soon as I confirm the transform / rotation of the points it crashes. This doesn't occur when running blender using --debug-all so I couldn't find any hints as to what is causing this. Proxy size of 25% seems to be related to the crashes - if you start the file with Scene Size for the proxy setting it won't crash. If you start the file with proxy size of 25% and swap to another setting it seems to still crash (gets inconsistent).
Any advice for narrowing down what this bug is so I can properly report it?

I can't seem to find any crash reports.

Exact steps for others to reproduce the error
Not sure how to reproduce from an empty file but I've attached the file that it is occurring in for me.

Open the file and tab into the metastrip for "Caption"

Select "Transform.002"

Select some keyframes in the graph editor

Move the keybinds using "G" and then confirm with left click

For me blender crashes at this point.

**System Information** Operating system: Windows 11 Graphics card: RX580 **Blender Version** Broken: (3.6.2, 3.4, 3.0) Worked: Not sure **Short description of error** Blender crashes when I move around keyframes from VSE strips in the graph editor (any strips) - as soon as I confirm the transform / rotation of the points it crashes. This doesn't occur when running blender using --debug-all so I couldn't find any hints as to what is causing this. Proxy size of 25% seems to be related to the crashes - if you start the file with Scene Size for the proxy setting it won't crash. If you start the file with proxy size of 25% and swap to another setting it seems to still crash (gets inconsistent). Any advice for narrowing down what this bug is so I can properly report it? I can't seem to find any crash reports. **Exact steps for others to reproduce the error** Not sure how to reproduce from an empty file but I've attached the file that it is occurring in for me. Open the file and tab into the metastrip for "Caption" Select "Transform.002" Select some keyframes in the graph editor Move the keybinds using "G" and then confirm with left click For me blender crashes at this point.
Rely added the
Type
Report
Priority
Normal
Status
Needs Triage
labels 2023-08-29 08:20:35 +02:00
Member

I get crashes as well, but when I scrub the timeline, will check

I get crashes as well, but when I scrub the timeline, will check
Member

If I am not mistaken, your crashes should go away if you disable to Glow.001, right?

If I am not mistaken, your crashes should go away if you disable to `Glow.001`, right?
Philipp Oeser added
Status
Confirmed
Module
VFX & Video
Interest
Video Sequencer
and removed
Status
Needs Triage
labels 2023-08-29 16:46:34 +02:00
Philipp Oeser self-assigned this 2023-08-29 16:46:39 +02:00
Member

Got a fix for the crash I am seeing, will post a patch shortly

Got a fix for the crash I am seeing, will post a patch shortly
Author
First-time contributor

Got a fix for the crash I am seeing, will post a patch shortly

you're such a legend lol. no clue how u solve it this fast ...
i was tryna work out why it was crashing for so long

> Got a fix for the crash I am seeing, will post a patch shortly you're such a legend lol. no clue how u solve it this fast ... i was tryna work out why it was crashing for so long
Author
First-time contributor

If I am not mistaken, your crashes should go away if you disable to Glow.001, right?

If I disable 'Glow.001' and do what I described it still crashes. but if I disable Glow.001, save, then restart blender it won't crash until i enable glow.001 and do what i described above again.

> If I am not mistaken, your crashes should go away if you disable to `Glow.001`, right? If I disable 'Glow.001' and do what I described it still crashes. but if I disable Glow.001, save, then restart blender it won't crash until i enable glow.001 and do what i described above again.
Member

If I am not mistaken, your crashes should go away if you disable to Glow.001, right?

If I disable 'Glow.001' and do what I described it still crashes. but if I disable Glow.001, save, then restart blender it won't crash until i enable glow.001 and do what i described above again.

Thx getting back, that still makes sense for the fix I think, will push this shortly...

> > If I am not mistaken, your crashes should go away if you disable to `Glow.001`, right? > > If I disable 'Glow.001' and do what I described it still crashes. but if I disable Glow.001, save, then restart blender it won't crash until i enable glow.001 and do what i described above again. Thx getting back, that still makes sense for the fix I think, will push this shortly...
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-08-30 10:24:54 +02:00
Author
First-time contributor

Hi Philipp. Sorry to bother you again but do you have any idea when this patch will be released? I downloaded the daily build today and it still crashes. It's a bit confusing how it doesn't crash in debug-all mode though haha.

Hi Philipp. Sorry to bother you again but do you have any idea when this patch will be released? I downloaded the daily build today and it still crashes. It's a bit confusing how it doesn't crash in debug-all mode though haha.
Member

Have you checked the 4.0 build or the 3.6 build?

Have you checked the 4.0 build or the 3.6 build?
Author
First-time contributor

Have you checked the 4.0 build or the 3.6 build?

3.6

> Have you checked the 4.0 build or the 3.6 build? 3.6
Member

Can you check the 4.0 build? (the fix hasn't been backported to 3.6 yet)

Can you check the 4.0 build? (the fix hasn't been backported to 3.6 yet)
Author
First-time contributor

Can you check the 4.0 build? (the fix hasn't been backported to 3.6 yet)

okay will do

> Can you check the 4.0 build? (the fix hasn't been backported to 3.6 yet) okay will do
Author
First-time contributor

Can you check the 4.0 build? (the fix hasn't been backported to 3.6 yet)

4.0 works!

> Can you check the 4.0 build? (the fix hasn't been backported to 3.6 yet) 4.0 works!
Member

Can you check the 4.0 build? (the fix hasn't been backported to 3.6 yet)

4.0 works!

Great, thx checking! Another round of backports will happen the next days, so the fix will be in 3.6.3 RC sonish

> > Can you check the 4.0 build? (the fix hasn't been backported to 3.6 yet) > > 4.0 works! Great, thx checking! Another round of backports will happen the next days, so the fix will be in 3.6.3 RC sonish
Author
First-time contributor

Multiply under the "Color" section no longer multiplies alpha which ruins the outline effect on the text. Also box selecting with left click dragging no longer works and I tried changing keybinds but can't get it working. 4.0.0 is a bit concerning for my workflow at the moment. any ideas how to fix these issues?

Multiply under the "Color" section no longer multiplies alpha which ruins the outline effect on the text. Also box selecting with left click dragging no longer works and I tried changing keybinds but can't get it working. 4.0.0 is a bit concerning for my workflow at the moment. any ideas how to fix these issues?
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#111642
No description provided.