Fix #111642: VSE glow code can overflow with small proxies

With such small proxy sizes (combined with a small blur radius), the
kernels `halfWidth` can get zero, which leads to a memory allocation of
same zero size and writing to that memory leads to overflow/crashes/cn
only go downhill from there.

The preferred fix would be to early out in such cases [which leads to
slightly different output -- well if the "buggy" output survives and
does not crash that is].

(alternatively we could just prevent the overflow and still let do
`RVBlurBitmap2_float` do stuff that it really should imo -- left the
alternative fix in this patch for the time being)